erDiagram
    CUSTOMERS ||--o{ FIELDS : owns
    CUSTOMERS ||--o{ FINANCING_APPLICATIONS : applies_for
    CUSTOMERS ||--o{ FINANCIAL_TRANSACTIONS : pays_or_receives

    FIELDS ||--o{ DISPATCH_JOBS : assigned_to
    FIELDS ||--o{ FINANCING_APPLICATIONS : secures
    EQUIPMENT ||--o{ DISPATCH_JOBS : performs
    CHEMICALS ||--o{ DISPATCH_JOBS : used_in

    TECHNICIANS ||--o{ DISPATCH_JOBS : dispatches
    TECHNICIANS ||--o{ DISPATCH_JOBS : approves
    TECHNICIANS ||--o{ FINANCING_APPLICATIONS : approves_financing

    EQUIPMENT ||--o{ INCIDENT_NOTES : has
    TECHNICIANS ||--o{ INCIDENT_NOTES : writes

    TECHNICIANS ||--o{ FLEET_REPORTS : generates
    FINANCING_APPLICATIONS ||--o{ FINANCIAL_TRANSACTIONS : generates_disbursement

    CUSTOMERS {
        int customer_id PK
        string company_name
        string phone
        string email
        boolean credit_hold
    }

    FIELDS {
        int field_id PK
        int customer_id FK
        string field_name
        string location
        float area
    }

    EQUIPMENT {
        int equipment_id PK
        string serial_number
        string equipment_type
        string status
        string current_location
    }

    TECHNICIANS {
        int technician_id PK
        string full_name
        string role
        boolean authenticated
    }

    CHEMICALS {
        int chemical_id PK
        string name
        string hazard_class
        boolean requires_signoff
    }

    DISPATCH_JOBS {
        int dispatch_id PK
        int equipment_id FK
        int field_id FK
        int technician_id FK
        string job_type
        int chemical_id FK
        string status
        datetime requested_at
        datetime started_at
        datetime completed_at
        string approval_status
        int approved_by FK
    }

    INCIDENT_NOTES {
        int incident_id PK
        int equipment_id FK
        int technician_id FK
        text raw_note
        text summarized_note
        string severity
        boolean resolved
        datetime created_at
    }

    FLEET_REPORTS {
        int report_id PK
        string month
        string status
        int progress
        int generated_by FK
        datetime created_at
    }

    FINANCING_APPLICATIONS {
        int application_id PK
        int customer_id FK
        int field_id FK
        float requested_amount
        string purpose
        string status
        int admin_approved_by FK
        string provider_reference
        float interest_rate
        int term_months
        float monthly_payment
        boolean farmer_accepted
        string rejection_reason
        datetime created_at
        datetime updated_at
    }

    FINANCIAL_TRANSACTIONS {
        int transaction_id PK
        int application_id FK
        int customer_id FK
        string transaction_type
        float amount
        string status
        string verification_hash
        datetime created_at
    }
